# Asinc_chat

./: .gitignore  __init__.py  alembic.ini  conf.py  index.rst  pyproject.toml
ChatWindow/: chatwindow.py  form.ui
_build/doctrees/: environment.pickle  index.doctree
_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_build/text/: index.txt
alembic/: env.py
alembic/versions/: 2eaf3866227b_.py  46b42f1c232b_.py  64e11dc67799_.py  8740690d0703_.py  a1293026adc9_.py  bc9565e5279d_.py  d8cc428c960b_.py  f93d950f6947_.py  fa7b81d0c1b2_.py  fc84b901f5eb_.py
lesson_1/: 1.py  2.py  3.py  4.py  5.py  6.py
lesson_10/: client.py  server.py
lesson_11/: __init__.py  add_frend_dialog.py  client.py  client_gui.py  first_form.py  form.ui  gui.py  gui_2.py  main_client_app.py  models.py  server.py  server_gui.py
lesson_11/ChatWindow/: ChatWindow.pyproject  chatwindow.py  client.py  first_form.ui  form.ui  ui_first_form.py  ui_form.py
lesson_2/: 1.py  2.py  3.py  orders.json  output.csv
lesson_3/: client.py  server.py
lesson_3_4/: client.py  server.py  test_client.py
lesson_3_4_5/: bad_client.py  client.py  server.py
lesson_3_4_5/log/: client_log_config.py
lesson_3_4_5_6/: bad_server.py  test_server.py
lesson_7/: client.py
lesson_8/: client.py  server.py
lesson_9/: 1_2_3.py  4_5.py  client_read.py  client_send.py  server_1.py
main_app/: client_gui.py  first_form.py  metaclass.py  models.py
tim_asinc_chat/: gui.py  tim_asicn_chat_client.py  tim_asinc_chat_server.py
(+5 files in other folders)
