[tool.poetry]
name = "asinc-chat"
version = "0.1.0"
description = ""
authors = ["T1monation <4timonaton@gmail.com>"]
readme = "README.md"
packages = [{include = "asinc_chat"}]

[tool.poetry.dependencies]
python = "^3.10"
chardet = "^5.1.0"
mimesis = "^7.1.0"
pyyaml = "^6.0"
autopep8 = "^2.0.2"
tabulate = "^0.9.0"
sqlalchemy = "^2.0.15"
postgres = "^4.0"
alembic = "^1.11.1"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
